[Payments] Do not reject PaymentResponse.complete() promise

Before this patch, when the user closes the PaymentRequest error message
that states "Transaction failed, please try again,"
PaymentResponse.complete() promise would be rejected. This is contrary
to the spec, which says the PaymentResponse.complete() promise should be
resolved when the user closes the UI.

Spec:
https://www.w3.org/TR/payment-request/#complete()-method

This patch changes the behavior of closing browser to resolve the
PaymentResponse.complete() promise instead.

After this patch, when the user closes the PaymentRequest error message
that states "Transaction failed, please try again,"
PaymentResponse.complete() promise is resolved with undefined.

Bug: 756298
Test: CompleteTest.ResolveCompletePromiseOnUnknownError
Test: CompleteTest.ResolveCompletePromiseOnUserClosingUI
Test: https://w3c-test.org/payment-request/payment-response/complete-method-manual.https.html
Change-Id: If21b4b1c459432acf6f3156ddf26304f04f87918
Reviewed-on: https://chromium-review.googlesource.com/682794
Commit-Queue: Rouslan Solomakhin <rouslan@chromium.org>
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#504463}
Former-commit-id: 92296b66078c265fd8af1b56455e9c3fc6fcd800